--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ isort = "5.13.2"
 mypy = "1.13.0"
 coverage = "^7.10.6"
 pytest-cov = "^7.0.0"
+ruff = "^0.8.0"
 
 [tool.poetry.scripts]
 parking = "parking.main:main"
@@ -52,3 +53,44 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[tool.ruff]
+target-version = "py311"
+line-length = 88
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+    "ARG", # flake8-unused-arguments
+    "SIM", # flake8-simplify
+    "TCH", # flake8-type-checking
+    "TID", # flake8-tidy-imports
+    "Q",  # flake8-quotes
+    "S",  # flake8-bandit
+    "N",  # pep8-naming
+    "RUF", # ruff-specific rules
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "S101",  # use of assert detected
+    "S104",  # possible binding to all interfaces
+    "S603",  # subprocess call - check for execution of untrusted input
+    "S607",  # starting a process with a partial executable path
+    "S105",  # possible hardcoded password
+    "S106",  # possible hardcoded password
+    "S108",  # probable insecure usage of temporary file
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["parking"]
+
+[tool.ruff.lint.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "double"
